<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:a="http://schemas.android.com/apk/res/android"
    a:id="@+id/drawerLayout"
    a:layout_width="match_parent"
    a:layout_height="match_parent">

    <RelativeLayout xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    a:id="@+id/activity_user_info"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:paddingBottom="@dimen/activity_vertical_margin"
    a:paddingLeft="@dimen/activity_horizontal_margin"
    a:paddingRight="@dimen/activity_horizontal_margin"
    a:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.pipecast.movierecommender.UserInfoActivity"
    a:background="@color/innerScreenBackground">

    <RelativeLayout
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:id="@+id/inner_layout"
        a:layout_marginLeft="20dp"
        a:layout_marginRight="20dp"
        a:layout_alignParentTop="true"
        a:layout_centerHorizontal="true">

        <TextView
            a:id="@+id/form_legend"
            a:text="@string/form_legend"
            style="@style/form_legend"
            a:layout_alignParentTop="true"
            a:layout_alignParentStart="true" />

        <RelativeLayout
            a:layout_width="match_parent"
            a:layout_below="@+id/form_legend"
            a:id="@+id/form_group1"
            style="@style/form_group"
            >
            <TextView
                a:text="@string/label_user_name"
                a:id="@+id/label_user_name"
                style="@style/form_item.label" />

            <EditText
                a:id="@+id/user_name"
                style="@style/form_item.text"
                a:inputType="textPersonName"
                a:layout_below="@+id/label_user_name"
                a:layout_alignParentStart="true"
                a:hint="Name" />
        </RelativeLayout>

        <RelativeLayout
            a:id="@+id/form_group2"
            a:layout_width="match_parent"
            a:layout_below="@+id/form_group1"
            style="@style/form_group"
            >
            <TextView
                a:text="@string/label_user_age"
                a:id="@+id/label_user_age"
                style="@style/form_item.label" />

            <EditText
                a:id="@+id/user_age"
                style="@style/form_item.text"
                a:layout_below="@+id/label_user_age"
                a:layout_alignParentStart="true"
                a:hint="Age"
                a:inputType="number" />
        </RelativeLayout>

        <RelativeLayout
            a:id="@+id/form_group3"
            a:layout_width="match_parent"
            a:layout_below="@+id/form_group2"
            style="@style/form_group">
            <TextView
                a:text="@string/label_user_gender"
                a:id="@+id/label_user_gender"
                style="@style/form_item.label" />

            <RadioGroup
                a:id="@+id/gender_radio_group"
                style="@style/form_item.gender_radio_group"
                a:layout_below="@+id/label_user_gender"
                a:layout_alignParentStart="true">
                <RadioButton
                    a:id="@+id/genderRadio1"
                    a:text="@string/label_radio_male"
                    style="@style/form_item.radio" />
                <RadioButton
                    a:text="@string/label_radio_female"
                    a:id="@+id/genderRadio2"
                    style="@style/form_item.radio" />
                <RadioButton
                    a:text="@string/label_radio_other"
                    a:id="@+id/genderRadio3"
                    style="@style/form_item.radio" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            a:id="@+id/form_group4"
            a:layout_width="match_parent"
            a:layout_below="@+id/form_group3"
            style="@style/form_group">
            <TextView
                a:text="@string/label_user_occupation"
                a:id="@+id/label_user_occupation"
                style="@style/form_item.label" />

            <Spinner
                a:id="@+id/occupation_spinner"
                a:spinnerMode="dialog"
                a:layout_below="@+id/label_user_occupation"
                a:layout_alignParentStart="true"
                style="@style/form_item.spinner"/>

        </RelativeLayout>

        <Button
            a:text="@string/recommendation_button_text"
            a:id="@+id/recommendation_button"
            a:layout_marginTop="12dp"
            a:layout_below="@+id/form_group4"
            a:layout_centerHorizontal="true"
            style="@style/button.primary.recommendation_button"
            a:onClick="getRecommendations" />


    </RelativeLayout>
</RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:layout_gravity="start">

        <!-- Profile Box -->

        <RelativeLayout
            android:id="@+id/profileBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/material_blue_grey_800"
            android:padding="8dp" >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/avatar"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rajesh Raikwar"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="4dp"
                    android:text="View Profile"
                    android:textColor="#fff"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- List of Actions (pages) -->
        <ListView
            android:id="@+id/navList"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/profileBox"
            android:choiceMode="singleChoice"
            android:background="#ffffffff" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
